--- a/mobile/app/src/main/res/values/colors.xml
+++ b/mobile/app/src/main/res/values/colors.xml
@@ -7,6 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="water">#547ec2</color>
-    <color name="ocean">#1c3387</color>
+    <!-- Custom Colors -->
+    <color name="water">#0077b6</color>
+    <color name="ocean">#03045e</color>
+    <color name="seaside">#669bbc</color>
+    <color name="oxygen">#90e0ef</color>
+    <color name="abyss">#003049</color>
+    <color name="red">#d62828</color>
+    <color name="crab">#f77f00</color>
+    <color name="sand">#e09f3e</color>
 </resources>
