--- a/mobile/app/src/main/res/values/colors.xml
+++ b/mobile/app/src/main/res/values/colors.xml
@@ -13,7 +13,11 @@
     <color name="seaside">#669bbc</color>
     <color name="oxygen">#90e0ef</color>
     <color name="abyss">#003049</color>
-    <color name="red">#d62828</color>
+    <color name="red">#e07a5f</color>
     <color name="crab">#f77f00</color>
     <color name="sand">#e09f3e</color>
+    <color name="rock">#001d3d</color>
+    <color name="cream">#dcdcdc</color>
+    <color name="seaweed">#31572c</color>
+    <color name="octopus">#231942</color>
 </resources>
