--- a/mobile/app/src/main/res/values/colors.xml
+++ b/mobile/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <!-- Custom Colors -->
     <color name="water">#0077b6</color>
     <color name="ocean">#03045e</color>
+    <color name="aquamarine">#FF018786</color>
     <color name="seaside">#669bbc</color>
     <color name="oxygen">#90e0ef</color>
     <color name="abyss">#003049</color>
@@ -18,6 +19,6 @@
     <color name="sand">#e09f3e</color>
     <color name="rock">#001d3d</color>
     <color name="cream">#dcdcdc</color>
-    <color name="seaweed">#31572c</color>
-    <color name="octopus">#231942</color>
+    <color name="seaweed">#38b000</color>
+    <color name="octopus">#822faf</color>
 </resources>
