--- a/mobile/app/src/main/res/values/colors.xml
+++ b/mobile/app/src/main/res/values/colors.xml
@@ -19,6 +19,6 @@
     <color name="sand">#e09f3e</color>
     <color name="rock">#001d3d</color>
     <color name="cream">#dcdcdc</color>
-    <color name="seaweed">#38b000</color>
+    <color name="seaweed">#008000</color>
     <color name="octopus">#822faf</color>
 </resources>
